added rules, and customized validation

--- a/src/pages/login/login.less
+++ b/src/pages/login/login.less
@@ -10,10 +10,32 @@
         background-color: #FFF9CA;
         img {
             width:110px;
+            margin: auto 60px;
+        }
+        h1 {
+            font-size: 60px;
+            color: #FF7396;
         }
 
     }
     .login-content {
+        height: 400px;
+        width: 500px;
+        background-color: #fff;
+        margin: 50px auto;
+        padding: 40px 80px;
+
+        h2 {
+            font-size: 30px;
+            text-align: center;
+            font-weight: bold;
+        }
+        .flogin-form {
+            .login-form-button{
+                width: 100%;
+                
+            }
+        }
 
     }
 }
